--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:layout_width="173dp"
         android:layout_height="85dp"
         android:layout_marginTop="84dp"
-        app:tint="@color/primary"
+        android:tint="@color/primary"
         app:layout_constraintBottom_toTopOf="@+id/welcome_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -94,8 +94,9 @@
         android:fontFamily="@font/montserrat_bold"
         android:text="Forgot Password?"
         android:textColor="@color/primary"
+        app:layout_constraintBottom_toTopOf="@+id/login_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="458dp" />
+        app:layout_constraintTop_toBottomOf="@+id/user_pswd" />
 </androidx.constraintlayout.widget.ConstraintLayout>
