--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -78,11 +78,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/expenses"
         android:layout_width="141dp"
         android:layout_height="75dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/rounded_corners"
+        android:onClick="onClick"
         android:text="Past Bills"
         android:textColor="#1B1B1B"
         app:backgroundTint="@color/primary"
