--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -36,12 +36,12 @@
         android:layout_width="205dp"
         android:layout_height="113dp"
         android:layout_marginTop="160dp"
-
+        app:tint="@color/primary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
 
-        />
+        app:srcCompat="@drawable/ic_vectorxpns" />
 
     <Button
         android:id="@+id/dashButton"
