--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -27,7 +27,7 @@
         android:layout_marginTop="204dp"
         android:fontFamily="@font/montserrat"
         android:text="Create  account"
-        android:textColor="#3edf8e"
+        android:textColor="#fafafa"
         android:textSize="60px"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,9 +39,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:ems="10"
+        android:hint="Full Name"
         android:inputType="textPersonName"
-        android:text="FullName"
         android:textColor="#FAFAFA"
+        android:textColorHint="#6A6A6A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,9 +54,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:ems="10"
+        android:hint="Email"
         android:inputType="textPersonName"
-        android:text="Email@gmail.com"
         android:textColor="#FAFAFA"
+        android:textColorHint="#6A6A6A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,9 +69,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:ems="10"
+        android:hint="Mobile"
         android:inputType="textPersonName"
-        android:text="9123912311"
         android:textColor="#FAFAFA"
+        android:textColorHint="#6A6A6A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,9 +84,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:hint="Confirm Password"
         android:inputType="textPassword"
-        android:text="Password"
         android:textColor="#FAFAFA"
+        android:textColorHint="#6A6A6A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,9 +99,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:ems="10"
+        android:hint="Password"
         android:inputType="textPassword"
-        android:text="Password"
         android:textColor="#FAFAFA"
+        android:textColorHint="#6A6A6A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
