--- a/app/src/main/res/layout/activity_add_expense.xml
+++ b/app/src/main/res/layout/activity_add_expense.xml
@@ -92,4 +92,19 @@
             android:textColor="#FFFFFF" />
     </RadioGroup>
 
+    <EditText
+        android:id="@+id/editTextDate"
+        android:layout_width="257dp"
+        android:layout_height="60dp"
+        android:ems="10"
+        android:hint="Select Date"
+        android:inputType="date"
+        android:textColor="#FAFAFA"
+        android:textColorHint="#FAFAFA"
+        app:layout_constraintBottom_toTopOf="@+id/description"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.625" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
