fixed ui , forget working. Fixed date picker

--- a/app/src/main/res/layout/activity_add_expense.xml
+++ b/app/src/main/res/layout/activity_add_expense.xml
@@ -92,7 +92,7 @@
             android:textColor="#FFFFFF" />
     </RadioGroup>
 
-    <EditText
+    <TextView
         android:id="@+id/editTextDate"
         android:layout_width="257dp"
         android:layout_height="60dp"
