--- a/app/src/main/res/layout/activity_split_expense.xml
+++ b/app/src/main/res/layout/activity_split_expense.xml
@@ -17,7 +17,9 @@
         android:textColor="@color/primary"
         app:layout_constraintBottom_toTopOf="@+id/submitButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/amount2"
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/amount2"
@@ -122,16 +124,16 @@
 
     <ImageButton
         android:id="@+id/search"
-        android:layout_width="58dp"
-        android:layout_height="49dp"
+        android:layout_width="54dp"
+        android:layout_height="43dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="44dp"
         android:backgroundTint="#2E2E2E"
         android:src="@drawable/ic_baseline_search_24"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.093"
         app:layout_constraintStart_toEndOf="@+id/amount2"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:tint="@color/primary" />
