--- a/app/src/main/res/layout/activity_split_expense.xml
+++ b/app/src/main/res/layout/activity_split_expense.xml
@@ -11,15 +11,13 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="68dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/montserrat_bold"
         android:text="Test User"
         android:textColor="@color/primary"
-        app:layout_constraintBottom_toTopOf="@+id/submitButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/amount2"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/amount2" />
 
     <EditText
         android:id="@+id/amount2"
@@ -99,7 +97,7 @@
         android:id="@+id/submitButton"
         android:layout_width="254dp"
         android:layout_height="56dp"
-        android:layout_marginBottom="84dp"
+        android:layout_marginBottom="28dp"
         android:background="@drawable/rounded_corners"
         android:onClick="addExpenseButton"
         android:text="ADD"
