--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -14,11 +14,13 @@
         android:layout_width="224dp"
         android:layout_height="36dp"
         android:layout_marginTop="4dp"
+        android:fontFamily="@font/montserrat_bold"
         android:hint="FUllerrs name"
         android:text="Mobile"
         android:textColor="#fafafa"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userFullName2" />
 
@@ -27,11 +29,13 @@
         android:layout_width="224dp"
         android:layout_height="36dp"
         android:layout_marginTop="4dp"
+        android:fontFamily="@font/montserrat_bold"
         android:hint="FUllerrs name"
         android:text="Full Name"
         android:textColor="#fafafa"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userFullName12" />
 
@@ -40,11 +44,13 @@
         android:layout_width="224dp"
         android:layout_height="36dp"
         android:layout_marginTop="4dp"
+        android:fontFamily="@font/montserrat_bold"
         android:hint="FUllerrs name"
         android:text="Email"
         android:textColor="#fafafa"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userFullName3" />
 
@@ -54,7 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="204dp"
 
-        android:fontFamily="@font/montserrat"
+        android:fontFamily="@font/montserrat_bold"
         android:text="User Profile"
         android:textColor="#fafafa"
         android:textSize="60px"
@@ -81,8 +87,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
+        android:fontFamily="@font/montserrat"
         android:text="Mobile No."
-        android:textColor="#fafafa"
+        android:textColor="@color/primary"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.276"
@@ -94,9 +101,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
+        android:fontFamily="@font/montserrat"
         android:hint="FUllerrs name"
         android:text="Full Name"
-        android:textColor="#fafafa"
+        android:textColor="@color/primary"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.293"
@@ -109,8 +117,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
 
+        android:fontFamily="@font/montserrat"
         android:text="E-mail"
-        android:textColor="#fafafa"
+        android:textColor="@color/primary"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.253"
