--- a/app/src/main/res/layout/activity_split_expense.xml
+++ b/app/src/main/res/layout/activity_split_expense.xml
@@ -130,7 +130,7 @@
         android:layout_marginBottom="84dp"
         android:background="@drawable/rounded_corners"
         android:onClick="addExpenseButton"
-        android:text="ADD"
+        android:text="SPLIT"
         android:textColor="#1B1B1B"
         app:backgroundTint="@color/primary"
         app:layout_constraintBottom_toBottomOf="parent"
