--- a/app/src/main/res/layout/activity_split_expense.xml
+++ b/app/src/main/res/layout/activity_split_expense.xml
@@ -98,15 +98,13 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="68dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/montserrat_bold"
         android:text="Test User"
         android:textColor="@color/primary"
-        app:layout_constraintBottom_toTopOf="@+id/submitButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/amount2"
-        app:layout_constraintVertical_bias="0.418" />
+        app:layout_constraintTop_toBottomOf="@+id/amount2" />
 
     <EditText
         android:id="@+id/description"
@@ -129,7 +127,6 @@
         android:layout_height="56dp"
         android:layout_marginBottom="84dp"
         android:background="@drawable/rounded_corners"
-        android:onClick="addExpenseButton"
         android:text="SPLIT"
         android:textColor="#1B1B1B"
         app:backgroundTint="@color/primary"
