--- a/app/src/main/res/layout/activity_creat_group.xml
+++ b/app/src/main/res/layout/activity_creat_group.xml
@@ -13,7 +13,7 @@
         android:layout_height="53dp"
         android:layout_marginTop="88dp"
         android:fontFamily="@font/montserrat_bold"
-        android:text="SPLIT EXPENSE"
+        android:text="CREATE GROUP"
         android:textAlignment="center"
         android:textColor="@color/primary"
         android:textSize="30sp"
@@ -21,45 +21,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/editTextDate"
-        android:layout_width="257dp"
-        android:layout_height="60dp"
-        android:ems="10"
-        android:hint="Select Date"
-        android:inputType="date"
-        android:textColor="#FAFAFA"
-        android:textColorHint="#9A9A9A"
-        app:layout_constraintBottom_toTopOf="@+id/description"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.659" />
-
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="48dp"
         android:fontFamily="@font/montserrat_bold"
-        android:text="Split With :"
+        android:text="Add Members"
         android:textColor="#FAFAFA"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/amount" />
-
-    <EditText
-        android:id="@+id/amount"
-        android:layout_width="258dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:hint="Amount"
-        android:inputType="textPersonName"
-        android:textColor="#fafafa"
-        android:textColorHint="#9A9A9A"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description" />
 
@@ -109,16 +79,16 @@
 
     <EditText
         android:id="@+id/description"
-        android:layout_width="258dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="104dp"
+        android:layout_width="184dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="72dp"
         android:ems="10"
-        android:hint="Description"
+        android:hint="Group Name"
         android:inputType="textPersonName"
         android:textColor="#fafafa"
         android:textColorHint="#9A9A9A"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.678"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -148,18 +118,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent" />
+
     <Button
         android:id="@+id/submitBut"
         android:layout_width="254dp"
         android:layout_height="56dp"
         android:layout_marginBottom="84dp"
         android:background="@drawable/rounded_corners"
-        android:text="SPLIT"
+        android:text="Create"
         android:textColor="#1B1B1B"
         app:backgroundTint="@color/primary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="70dp"
+        android:layout_height="74dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toStartOf="@+id/description"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:srcCompat="@drawable/ic_launcher_foreground" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
