--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -84,11 +84,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/groupBtn"
         android:layout_width="141dp"
         android:layout_height="75dp"
         android:background="@drawable/rounded_corners"
-        android:text="Create Group"
+        android:onClick="onClick"
+        android:text="Groups"
         android:textColor="#1B1B1B"
         app:backgroundTint="@color/primary"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -122,7 +123,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button5"
+        app:layout_constraintStart_toEndOf="@+id/groupBtn"
         app:layout_constraintTop_toBottomOf="@+id/button4" />
 
     <Button
@@ -134,7 +135,7 @@
         android:text="Past Bills"
         android:textColor="#1B1B1B"
         app:backgroundTint="@color/primary"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintBottom_toTopOf="@+id/groupBtn"
         app:layout_constraintEnd_toStartOf="@+id/button4"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
