--- a/app/src/main/res/layout/activity_split_expense.xml
+++ b/app/src/main/res/layout/activity_split_expense.xml
@@ -30,7 +30,7 @@
         android:inputType="date"
         android:textColor="#FAFAFA"
         android:textColorHint="#9A9A9A"
-        app:layout_constraintBottom_toTopOf="@+id/description"
+        app:layout_constraintBottom_toTopOf="@+id/groupName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
@@ -61,7 +61,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description" />
+        app:layout_constraintTop_toBottomOf="@+id/groupName" />
 
     <EditText
         android:id="@+id/searchField"
@@ -108,7 +108,7 @@
         app:layout_constraintTop_toBottomOf="@+id/searchField" />
 
     <EditText
-        android:id="@+id/description"
+        android:id="@+id/groupName"
         android:layout_width="258dp"
         android:layout_height="48dp"
         android:layout_marginTop="104dp"
