--- a/app/src/main/res/layout/activity_creat_group.xml
+++ b/app/src/main/res/layout/activity_creat_group.xml
@@ -31,7 +31,7 @@
         android:text="Add Members"
         android:textColor="#FAFAFA"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description" />
+        app:layout_constraintTop_toBottomOf="@+id/groupName" />
 
     <EditText
         android:id="@+id/searchField"
@@ -78,7 +78,7 @@
         app:layout_constraintTop_toBottomOf="@+id/searchField" />
 
     <EditText
-        android:id="@+id/description"
+        android:id="@+id/groupName"
         android:layout_width="184dp"
         android:layout_height="51dp"
         android:layout_marginTop="72dp"
@@ -134,13 +134,13 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/groupIco"
         android:layout_width="70dp"
         android:layout_height="74dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toStartOf="@+id/description"
+        app:layout_constraintEnd_toStartOf="@+id/groupName"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:srcCompat="@drawable/ic_launcher_foreground" />
+        app:srcCompat="@drawable/groups" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
