--- a/app/src/main/res/layout/list_item_single.xml
+++ b/app/src/main/res/layout/list_item_single.xml
@@ -7,7 +7,8 @@
     android:background="#3D3D3D"
     app:cardElevation="8dp"
     app:cardCornerRadius="8dp"
-    android:paddingTop="16dp">
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp">
 
     <TextView
         android:id="@+id/b_date"
